--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
         <!-- Slide 1 -->
         <div class="paper image bounce2">
             <p>Wanaaari xhal cute.</p>
-            <img src="C:\Users\Irelia\Documents\GitHub\Ask-out-your-Valentine\images\maissae3.jpg" alt="Cute Image">
+            <img src="images/maissae3.jpg" alt="Cute Image">
         </div>
 
         <!-- Slide 2 -->
@@ -79,7 +79,7 @@
         <!-- Slide 4 -->
         <div class="paper image bounce2">
             <p>Ay haja m3ak is special.</p>
-            <img src="C:\Users\Irelia\Documents\GitHub\Ask-out-your-Valentine\images\maissae1.jpg" alt="Special Moment">
+            <img src="images/maissae1.jpg" alt="Special Moment">
         </div>
 
         <!-- Slide 5 -->
@@ -95,7 +95,7 @@
         <!-- Slide 7 -->
         <div class="paper image bounce2">
             <p>Nti hiya everything.</p>
-            <img src="C:\Users\Irelia\Documents\GitHub\Ask-out-your-Valentine\images\maissae2.jpg" alt="Everything">
+            <img src="images/maissae2.jpg" alt="Everything">
         </div>
 
         <!-- Slide 8 -->
@@ -111,7 +111,7 @@
         <!-- Slide 10 -->
         <div class="paper image bounce2">
             <p>Forever and Always.</p>
-            <img src="C:\Users\Irelia\Documents\GitHub\Ask-out-your-Valentine\images\7na.jpg" alt="Forever">
+            <img src="images/7na.jpg" alt="Forever">
         </div>
     </div>
 
